@@ -1,3 +1,5 @@
+* #3025: Make bundlebuilder work even if SUGAR_PREFIX is not set. (marco)
+
 Snapshot 0b3f687749
 
 * #3088: Fix style of zoom buttons palettes. (marco)
